--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.140",
     "@types/jest": "^29.5.12",
     "@types/node": "20.14.2",
+    "aws-cdk": "2.146.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.4",
-    "aws-cdk": "2.146.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.4.5"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.602.0",
+    "@aws-sdk/util-dynamodb": "^3.602.0",
+    "@types/uuid": "^10.0.0",
     "aws-cdk-lib": "2.146.0",
-    "constructs": "^10.0.0"
+    "constructs": "^10.0.0",
+    "uuid": "^10.0.0"
   }
 }
