--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "~5.4.5"
   },
   "dependencies": {
+    "@aws-sdk/client-api-gateway": "^3.600.0",
     "@aws-sdk/client-dynamodb": "^3.602.0",
     "@aws-sdk/util-dynamodb": "^3.602.0",
     "@types/uuid": "^10.0.0",
